ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: argocd-server
             port:
               number: 80
    host: argocd.CIVODNS
  tls:
  - hosts:
    - argocd.CIVODNS
    secretName: argocd-secret # do not change, this is provided by Argo CD
